clusters/talos-cluster/vela-video/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vela-video
  namespace: vela-video
spec:
  selector:
    app: vela-video
  ports:
    - protocol: TCP
      port: 9191
      targetPort: 9191
